Fix obscure dark mode interaction bug with WP math

--- a/css/dark-mode-GENERATED.css
+++ b/css/dark-mode-GENERATED.css
@@ -513,10 +513,10 @@ img.invert,
 img.invert-auto {
     transition: filter 0.25s ease;
 }
-img:hover,
-img.invert:hover,
-img.invert-auto:hover,
-img:not(.invert):not(.invert-auto):hover {
+img:not(.drop-filter-on-hover-not):hover,
+img:not(.drop-filter-on-hover-not).invert:hover,
+img:not(.drop-filter-on-hover-not).invert-auto:hover,
+img:not(.drop-filter-on-hover-not):not(.invert):not(.invert-auto):hover {
     filter: none;
     transition: filter 0s ease 0.25s;
 }
